--- a/Front-End-Interview-Questions/001.md
+++ b/Front-End-Interview-Questions/001.md
@@ -14,7 +14,8 @@
         DOM、BOM、内存泄漏、跨域、异步装载、模板引擎、前端MVC、路由、模块化、Canvas、ECMAScript 6、Nodejs、编程规范
 
     其他：
-        移动端、响应式、自动化构建、HTTP、离线存储、WEB安全、优化、重构、团队协作、可维护、易用性、SEO、UED、架构、职业生涯、快速学习能力、BOM、DOM
+        移动端、响应式、自动化构建、HTTP、离线存储、WEB安全、优化、重构、团队协作、可维护、易用性、  
+        SEO、UED、架构、职业生涯、快速学习能力、BOM、DOM
 
 作为一名前端工程师，**无论工作年头长短都应该掌握的知识点**：
 
